# cuda_GEMM_tutorial

./: .gitignore  CMakeLists.txt  gemm.cu  gemm.h  gemm_kernel.cuh  gemm_kernel_utils.cu  gemm_kernel_utils.cuh  gemm_v3_2d_block_tiling_1d_thread_tiling.cu  gemm_v4_2d_block_tiling_2d_thread_tiling.cu  gemm_v5_2d_block_tiling_2d_thread_tiling_vectorized_transposed.cu  gemm_v6_2d_block_tiling_2d_warp_tiling_2d_thread_tiling_vectorized_transposed.cu  main.cpp  utils.cpp
